# dataframe-plot

./: .envrc  .gitignore  LICENSE  README.md  dataframe-plot.cabal  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: CI.yml
scripts/: ci  format  lint
src/DataFrame/Plot/: High.hs
src/DataFrame/Plot/Typed/: High.hs  Low.hs  Mid.hs
src/DataFrame/Plot/Typed/Mid/: Text.hs
test/: Gen.hs
test/Artifact/: SnapshotSpec.hs
